# tabml

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: passengers.csv
tabml/: __init__.py  audit.py  cli.py  core.py  report.py  serve.py
tabml/web/: index.html
tests/: test_audit.py  test_core.py  test_serve.py
