[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tabml"
version = "0.1.0"
description = "Train, evaluate, and serve a model from any CSV in one command."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Srinivaas Vallabhaneni" }]
keywords = ["machine-learning", "scikit-learn", "automl", "cli", "tabular"]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
tabml = "tabml.cli:main"

[tool.setuptools.packages.find]
include = ["tabml*"]
