[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tabml"
version = "0.2.0"
description = "Audit, train, explain, and serve a model from any CSV — with target-leakage detection."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Srinivaas Vallabhaneni" }]
keywords = ["machine-learning", "scikit-learn", "automl", "cli", "tabular"]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
serve = ["fastapi>=0.111", "uvicorn>=0.30"]
dev = ["pytest>=7.4", "fastapi>=0.111", "uvicorn>=0.30", "httpx>=0.27"]

[project.scripts]
tabml = "tabml.cli:main"

[tool.setuptools.packages.find]
include = ["tabml*"]

[tool.setuptools.package-data]
tabml = ["web/*.html"]
